import { afterEach, describe, expect, it, vi } from "vitest";
import { cleanup, render } from "@testing-library/svelte";

import { rejectAfter, resolveAfter } from "@duskit/promise";

import { Suspense } from "../..";

vi.useFakeTimers();

describe("Suspense", () => {
  const delay = 1000;

  const baseProps = {
    waitFor: resolveAfter(delay, "some result"),
  };

  const baseOptions = {
    props: baseProps,
    target: document.body,
  };

  afterEach(cleanup);

  it("should be able to render the `Suspense` component in a pending state", () => {
    const { container } = render(Suspense, baseOptions);

    expect(container.firstElementChild).toMatchSnapshot();
  });

  it("should allow to specify the preferred tag for the rendered element", () => {
    const props = Object.freeze({
      ...baseProps,
      as: "section",
    });
    const { container } = render(Suspense, { ...baseOptions, props });

    expect(container.firstElementChild).toMatchSnapshot();
  });

  it("should pass additional class names and attributes to the rendered element", () => {
    const props = {
      ...baseProps,
      className: "foo bar",
      "data-baz": "baz",
      id: "some-id",
    };
    const { container } = render(Suspense, { ...baseOptions, props });

    expect(container.firstElementChild).toMatchSnapshot();
  });

  it("should add appropriate class names for gap variants", async () => {
    /** @type {import("svelte").ComponentProps<Suspense<string, "div">>} */
    const props = {
      ...baseProps,
      gap: "small",
    };
    const { container, rerender } = render(Suspense, { ...baseOptions, props });

    expect(container.firstElementChild).toHaveClass("dusk-suspense--small-gap");

    await rerender({ ...props, gap: "large" });

    expect(container.firstElementChild).toHaveClass("dusk-suspense--large-gap");
  });

  it("should accept a custom message for the pending state", () => {
    const props = {
      ...baseProps,
      pendingMessage: "Operation pending",
    };
    const { container } = render(Suspense, { ...baseOptions, props });

    expect(container.firstElementChild).toMatchSnapshot();
  });

  it("should be able to render the `Suspense` in a successful state", async () => {
    const { container } = render(Suspense, baseOptions);

    await vi.advanceTimersByTimeAsync(delay);

    expect(container.firstElementChild).toMatchSnapshot();
  });

  it('should be able to render the `Suspense` in a failure state with the "alert" variant as a default', async () => {
    const props = {
      ...baseProps,
      waitFor: rejectAfter(delay, new Error("some error")),
    };

    const { container } = render(Suspense, { ...baseOptions, props });

    await vi.advanceTimersByTimeAsync(delay);

    expect(container.firstElementChild).toMatchSnapshot();
  });

  it('should be able to render the `Suspense` in a failure state with the "banner" error variant', async () => {
    /** @type {import("svelte").ComponentProps<Suspense<string, "div">>} */
    const props = {
      ...baseProps,
      errorVariant: "banner",
      waitFor: rejectAfter(delay, new Error("some error")),
    };

    const { container } = render(Suspense, { ...baseOptions, props });

    await vi.advanceTimersByTimeAsync(delay);

    expect(container.firstElementChild).toMatchSnapshot();
  });

  it('should be able to render the `Suspense` in a failure state with the "details" error variant', async () => {
    /** @type {import("svelte").ComponentProps<Suspense<string, "div">>} */
    const props = {
      ...baseProps,
      errorVariant: "details",
      waitFor: rejectAfter(delay, new Error("some error")),
    };

    const { container } = render(Suspense, { ...baseOptions, props });

    await vi.advanceTimersByTimeAsync(delay);

    expect(container.firstElementChild).toMatchSnapshot();
  });

  it("should accept a custom message for the failure state", async () => {
    const props = {
      ...baseProps,
      errorMessage: "Operation failed",
      waitFor: rejectAfter(delay, new Error("some error")),
    };

    const { container } = render(Suspense, { ...baseOptions, props });

    await vi.advanceTimersByTimeAsync(delay);

    expect(container.firstElementChild).toMatchSnapshot();
  });
});
