// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Suspense > should accept a custom message for the failure state 1`] = `
<div
  class="dusk-suspense dusk-suspense--gap--medium"
>
  <!---->
  <!---->
  <!---->
  <!---->
  <div
    class="dusk-error-alert dusk-error-alert--gap--medium dusk-suspense__error"
  >
    <!---->
    <svg
      class="dusk-icon dusk-icon--size--default dusk-error-alert__icon"
      role="graphics-symbol"
      viewBox="0 0 24 24"
    >
      <path
        d="M20 6.91L17.09 4L12 9.09L6.91 4L4 6.91L9.09 12L4 17.09L6.91 20L12 14.91L17.09 20L20 17.09L14.91 12L20 6.91Z"
      />
      <!---->
    </svg>
    
    <!---->
     
    <!---->
    <details
      class="dusk-error-details dusk-error-alert__error-details"
    >
      <summary
        class="dusk-error-details__summary"
      >
        Operation failed
      </summary>
       
      <pre
        class="dusk-error-details__error"
      >
        
			some error
		
      </pre>
    </details>
    
    <!---->
  </div>
  
  <!---->
   
  <!---->
  <!---->
   
  <!---->
  
  
</div>
`;

exports[`Suspense > should accept a custom message for the pending state 1`] = `
<div
  class="dusk-suspense dusk-suspense--gap--medium"
>
  <!---->
  <!---->
  <!---->
  <svg
    class="dusk-throbber dusk-suspense__throbber"
    height="64px"
    role="progressbar"
    viewBox="0 0 128 128"
    width="64px"
  >
    <g>
      <path
        d="M75.4 126.63a11.43 11.43 0 0 1-2.1-22.65 40.9 40.9 0 0 0 30.5-30.6 11.4 11.4 0 1 1 22.27 4.87h.02a63.77 63.77 0 0 1-47.8 48.05v-.02a11.38 11.38 0 0 1-2.93.37z"
      />
      <animatetransform
        attributeName="transform"
        dur="1800ms"
        from="0 64 64"
        repeatCount="indefinite"
        to="360 64 64"
        type="rotate"
      />
    </g>
  </svg>
  <!---->
   
  <span
    class="dusk-suspense__pending-message"
  >
    Operation pending
  </span>
  
  
  
</div>
`;

exports[`Suspense > should allow to specify the preferred tag for the rendered element 1`] = `
<section
  class="dusk-suspense dusk-suspense--gap--medium"
>
  <!---->
  <!---->
  <!---->
  <svg
    class="dusk-throbber dusk-suspense__throbber"
    height="64px"
    role="progressbar"
    viewBox="0 0 128 128"
    width="64px"
  >
    <g>
      <path
        d="M75.4 126.63a11.43 11.43 0 0 1-2.1-22.65 40.9 40.9 0 0 0 30.5-30.6 11.4 11.4 0 1 1 22.27 4.87h.02a63.77 63.77 0 0 1-47.8 48.05v-.02a11.38 11.38 0 0 1-2.93.37z"
      />
      <animatetransform
        attributeName="transform"
        dur="1800ms"
        from="0 64 64"
        repeatCount="indefinite"
        to="360 64 64"
        type="rotate"
      />
    </g>
  </svg>
  <!---->
   
  <span
    class="dusk-suspense__pending-message"
  >
    
  </span>
  
  
  
</section>
`;

exports[`Suspense > should be able to render the \`Suspense\` component in a pending state 1`] = `
<div
  class="dusk-suspense dusk-suspense--gap--medium"
>
  <!---->
  <!---->
  <!---->
  <svg
    class="dusk-throbber dusk-suspense__throbber"
    height="64px"
    role="progressbar"
    viewBox="0 0 128 128"
    width="64px"
  >
    <g>
      <path
        d="M75.4 126.63a11.43 11.43 0 0 1-2.1-22.65 40.9 40.9 0 0 0 30.5-30.6 11.4 11.4 0 1 1 22.27 4.87h.02a63.77 63.77 0 0 1-47.8 48.05v-.02a11.38 11.38 0 0 1-2.93.37z"
      />
      <animatetransform
        attributeName="transform"
        dur="1800ms"
        from="0 64 64"
        repeatCount="indefinite"
        to="360 64 64"
        type="rotate"
      />
    </g>
  </svg>
  <!---->
   
  <span
    class="dusk-suspense__pending-message"
  >
    
  </span>
  
  
  
</div>
`;

exports[`Suspense > should be able to render the \`Suspense\` in a failure state with the "alert" variant as a default 1`] = `
<div
  class="dusk-suspense dusk-suspense--gap--medium"
>
  <!---->
  <!---->
  <!---->
  <!---->
  <div
    class="dusk-error-alert dusk-error-alert--gap--medium dusk-suspense__error"
  >
    <!---->
    <svg
      class="dusk-icon dusk-icon--size--default dusk-error-alert__icon"
      role="graphics-symbol"
      viewBox="0 0 24 24"
    >
      <path
        d="M20 6.91L17.09 4L12 9.09L6.91 4L4 6.91L9.09 12L4 17.09L6.91 20L12 14.91L17.09 20L20 17.09L14.91 12L20 6.91Z"
      />
      <!---->
    </svg>
    
    <!---->
     
    <!---->
    <details
      class="dusk-error-details dusk-error-alert__error-details"
    >
      <summary
        class="dusk-error-details__summary"
      >
        Error
      </summary>
       
      <pre
        class="dusk-error-details__error"
      >
        
			some error
		
      </pre>
    </details>
    
    <!---->
  </div>
  
  <!---->
   
  <!---->
  <!---->
   
  <!---->
  
  
</div>
`;

exports[`Suspense > should be able to render the \`Suspense\` in a failure state with the "banner" error variant 1`] = `
<div
  class="dusk-suspense dusk-suspense--gap--medium"
>
  <!---->
  <!---->
  <!---->
  <div
    class="dusk-banner dusk-banner--variant--error dusk-banner--no-title"
  >
    <!---->
    <svg
      class="dusk-icon dusk-icon--size--large dusk-banner__icon"
      role="graphics-symbol"
      viewBox="0 0 24 24"
    >
      <path
        d="M23,12L20.56,14.78L20.9,18.46L17.29,19.28L15.4,22.46L12,21L8.6,22.47L6.71,19.29L3.1,18.47L3.44,14.78L1,12L3.44,9.21L3.1,5.53L6.71,4.72L8.6,1.54L12,3L15.4,1.54L17.29,4.72L20.9,5.54L20.56,9.22L23,12M20.33,12L18.5,9.89L18.74,7.1L16,6.5L14.58,4.07L12,5.18L9.42,4.07L8,6.5L5.26,7.09L5.5,9.88L3.67,12L5.5,14.1L5.26,16.9L8,17.5L9.42,19.93L12,18.81L14.58,19.92L16,17.5L18.74,16.89L18.5,14.1L20.33,12M11,15H13V17H11V15M11,7H13V13H11V7"
      />
      <!---->
    </svg>
    
    <!---->
     
    <div
      class="dusk-banner__content"
    >
      <!---->
       
      <!---->
      <details
        class="dusk-error-details dusk-suspense__error"
      >
        <summary
          class="dusk-error-details__summary"
        >
          Error
        </summary>
         
        <pre
          class="dusk-error-details__error"
        >
          
			some error
		
        </pre>
      </details>
      
      <!---->
    </div>
  </div>
  <!---->
   
  <!---->
  <!---->
   
  <!---->
  
  
</div>
`;

exports[`Suspense > should be able to render the \`Suspense\` in a failure state with the "details" error variant 1`] = `
<div
  class="dusk-suspense dusk-suspense--gap--medium"
>
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
  <details
    class="dusk-error-details dusk-suspense__error"
  >
    <summary
      class="dusk-error-details__summary"
    >
      Error
    </summary>
     
    <pre
      class="dusk-error-details__error"
    >
      
			some error
		
    </pre>
  </details>
  
  
  <!---->
   
  <!---->
  <!---->
   
  <!---->
  
  
</div>
`;

exports[`Suspense > should be able to render the \`Suspense\` in a successful state 1`] = `
<div
  class="dusk-suspense dusk-suspense--gap--medium"
>
  <!---->
  <!---->
  
  
  
</div>
`;

exports[`Suspense > should pass additional class names and attributes to the rendered element 1`] = `
<div
  class="dusk-suspense dusk-suspense--gap--medium foo bar"
  data-baz="baz"
  id="some-id"
>
  <!---->
  <!---->
  <!---->
  <svg
    class="dusk-throbber dusk-suspense__throbber"
    height="64px"
    role="progressbar"
    viewBox="0 0 128 128"
    width="64px"
  >
    <g>
      <path
        d="M75.4 126.63a11.43 11.43 0 0 1-2.1-22.65 40.9 40.9 0 0 0 30.5-30.6 11.4 11.4 0 1 1 22.27 4.87h.02a63.77 63.77 0 0 1-47.8 48.05v-.02a11.38 11.38 0 0 1-2.93.37z"
      />
      <animatetransform
        attributeName="transform"
        dur="1800ms"
        from="0 64 64"
        repeatCount="indefinite"
        to="360 64 64"
        type="rotate"
      />
    </g>
  </svg>
  <!---->
   
  <span
    class="dusk-suspense__pending-message"
  >
    
  </span>
  
  
  
</div>
`;
